--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Lucrezia Ferme</h1>
-      <p> <span class="typed" data-typed-items="Molecular Biologist, Microscopy lover, BioImage Analysis enthusiast, Spaghetti eater "></span></p>
+      <p> <span class="typed" data-typed-items="Molecular Biologist, Microscopist, BioImage Analyst in the making, Spaghetti eater "></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -119,16 +119,19 @@
             <p class="font-italic">
               </p>
 
-            <p>  I am a molecular biologist interested in Stem Cell &amp; Developmental Biology. Over the course of the past 4 years I have been working in
-              several renowned intitutes around Europe, where I had the chance to dive deeper into the fascinating world of cell fate determination and morphogenesis.
-              I was involved in the setting up of several projects and trained to work with multiple cell types and model organisms. During this time,
-              I started my journey into programming and image analysis, which are now one of my main passions.
+            <p>  I am a molecular biotechnologist interested in Stem Cell &amp; Developmental Biology. Currently, I work as a PhD candidate in the Cell Biology
+              of Tissue Morphogenesis laboratory, i.e. Norden lab, at the <a href="https://gulbenkian.pt/ciencia/">Instituto Gulbenkian de Ciência</a>.
               </p>
 
-            <p>  At the moment, I am based in Lisbon, where I am working as a PhD candidate in the laboratory of Dr. Caren Norden.
-            My current project focuses on the mechanisms that coordinate proliferation and differentiation in the retinal neuroepithelium
-            and involves the use of cutting-edge microscopy techniques such as AiryScan microscopy, Lightsheet Fluorescence Microscopy and
-            deep learning tools for image processing.
+            <p>
+            My main research interest is to understand how progenitor stem cells can integrate intrinsic and extrinisc signals to coordinate different programs during development,
+            such as proliferation and differentiation. To this end, I am studying a particular epithelium, called psuedostratified, which is often
+            found as organ precursors in many developmental contexts across evolution. In particular, I am trying to understand the role of pseudostratification
+            in organogenesis of the vertebrate retina, using zebrafish as a model system.
+            </p>
+
+            <p>
+              To find more about my research and my interests, check out the Projects and Publication sections!
             </p>
 
 
@@ -152,9 +155,17 @@
           <table class="table table-sm table-borderless">
 
             <tr>
-              <th scope="row">Jan 20, 2020</th>
+              <th scope="row">Jan 20, 2021</th>
               <td>
                   Website is online (!) and still in the making <img class="emoji" title=":sparkles:" alt=":sparkles:" src="https://github.githubassets.com/images/icons/emoji/unicode/2728.png" height="20" width="20"> <img class="emoji" title=":smile:" alt=":smile:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f604.png" height="20" width="20">
+              </td>
+            </tr>
+
+            <tr>
+              <th scope="row">April 01, 2022</th>
+              <td>
+                Visiting <a href="https://www.mpi-cbg.de/research/researchgroups/currentgroups/carl-modes/research-focus">Carl Modes' group</a>
+                at the Max Planck of Cell Biology and Genetics in Dresden for a period of 4 months: more modelling to come!
               </td>
             </tr>
           </table>
@@ -187,14 +198,14 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
+          <!--div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
               <i class="icofont-airplane-alt"></i>
               <span data-toggle="counter-up">+4</span>
               <p><strong>Years</strong> </p>
               <p>at the lab bench </p>
             </div>
-          </div>
+          </div-->
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
@@ -222,120 +233,12 @@
 
 
 
-
-
-
-
-
-
-    <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Skills</h2>
-          <p>Omnia vincit amor</p>
-        </div>
-
-        <div class="row skills-content">
-
-          <div class="col-lg-6" data-aos="fade-up">
-
-            <div class="progress">
-              <span class="skill">Fluorescence Microscopy <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Lightsheet Fluorescence Microscopy <i class="val">70%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">FACS <i class="val">50%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">FISH and immunostainings <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Molecular Biology techniques <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Tissue Culture <i class="val">100%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-
-            <div class="progress">
-              <span class="skill">Python <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">ImageJ Macro <i class="val">40%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">R <i class="val">30%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">HTML <i class="val">20%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Skills Section -->
-
-
-
-
-
-
-
-
-
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
       <div class="container">
 
         <div class="section-title">
-          <h2>Resume</h2>
+          <h2>Short Resume</h2>
           <p> </p>
         </div>
 
@@ -344,18 +247,18 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Integrative Biology &amp; Biomedicine PhD programme </h4>
-              <h5>2019 - present</h5>
+              <h5>Oct 2019 - current </h5>
               <p><em>Instituto Gulbenkian de Ciencia, Oeiras - Lisbon, PT</em></p>
               <p>Selected through the International Max Planck Research School for Cell, Development and System Biology (call 2019) </p>
             </div>
             <div class="resume-item">
               <h4>MSc in Cellular &amp; Molecular Biotechnology </h4>
-              <h5>2016 - 2018</h5>
+              <h5>Sept 2016 - Dec 2018</h5>
               <p><em>University of Trento, Trento, IT</em></p>
             </div>
             <div class="resume-item">
               <h4>BSc in Medical Biotechnology </h4>
-              <h5>2013 - 2016</h5>
+              <h5>Sept 2013 - July 2016</h5>
               <p><em>University of Milan, Milan, IT</em></p>
             </div>
           </div>
@@ -364,39 +267,39 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>PhD candidate</h4>
-              <h5>2019 - Present</h5>
+              <h5> Apr 2020 - current </h5>
               <p><em><a href="https://gulbenkian.pt/ciencia/research-groups/cnorden/">Norden Lab</a> - IGC, Oeiras, Portugal</em></p>
-              <ul>
+              <!--ul>
                 <li>Focus on microscopy and advanced 3D image analysis using deep learning tools, such as StarDist + GPU accelerated computing</li>
                 <li>Model organisms: zebrafish &amp; human retinal organoids </li>
-              </ul>
+              </ul-->
             </div>
             <div class="resume-item">
               <h4>Scientific Intern</h4>
-              <h5>2019 </h5>
+              <h5>Feb 2019 - July 2019 </h5>
               <p><em> <a href="https://ist.ac.at/en/research/kicheva-group/">Kicheva Lab</a> - IST Austria, Klosterneuberg, Austria</em></p>
-              <ul>
+              <!--ul>
                 <li>Investigation of BMP and its antagonists in patterning the vertebrate neural tube</li>
                 <li>Model organisms: mouse &amp; chick embryos</li>
-              </ul>
+              </ul-->
             </div>
             <div class="resume-item">
               <h4>Master student </h4>
-              <h5>2018 </h5>
+              <h5>Feb 2018 - Dec 2018 </h5>
               <p><em> <a href="https://www.maxperutzlabs.ac.at/research/research-groups/buecker">Buecker Lab</a> - Max Perutz Laboratories, Vienna, Austria </em></p>
-              <ul>
+              <!--ul>
                 <li>Established live imaging strategies to study the sources of transcriptional heterogeneity in differentiation of mouse Embryonic Stem cells.</li>
                 <li>Model system: mESCs &amp; HeLa cells </li>
-              </ul>
+              </ul-->
             </div>
             <div class="resume-item">
               <h4>Bachelor student</h4>
-              <h5>2013 </h5>
+              <h5>Feb 2016 - July 2016 </h5>
               <p><em> <a href="https://www.ifom.eu/en/cancer-research/research-labs/research-lab-pagani.php">Pagani Lab</a> - INGM, Milano, Italia</em></p>
-              <ul>
+              <!--ul>
                 <li>Project focusing on the role of long non-coding RNAs in differentiation of T naive lymphocytes </li>
                 <li>Model system: primary human T lymphocytes </li>
-              </ul>
+              </ul-->
           </div>
         </div>
 
@@ -426,7 +329,8 @@
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-pub">Publication</li>
               <li data-filter=".filter-code">Code</li>
-              <li data-filter=".filter-blog">Blog</li>
+              <li data-filter=".filter-blog">Communication</li>
+              <li data-filter=".filter-volunteering">Volunteering</li>
             </ul>
           </div>
         </div>
@@ -435,9 +339,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-blog">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/retina-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/retina-1.jpg" data-gall="portfolioGallery" class="venobox" title="Nuclear Packing"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
