--- a/index.html
+++ b/index.html
@@ -343,6 +343,7 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/retina-1.jpg" data-gall="portfolioGallery" class="venobox" title="Nuclear Packing"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a class="mid-gray" href="/research/" title="Research interests page">	Research </a>
               </div>
             </div>
           </div>
